[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "benchgecko"
version = "0.1.0"
description = "Official Python SDK for the BenchGecko API. Compare AI models, benchmarks, and pricing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "BenchGecko", email = "hello@benchgecko.ai"}
]
keywords = ["ai", "benchmarks", "llm", "models", "pricing", "machine-learning", "gpt", "claude", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://benchgecko.ai"
Documentation = "https://benchgecko.ai/api-docs"
Repository = "https://github.com/BenchGecko/benchgecko-python"
"Bug Tracker" = "https://github.com/BenchGecko/benchgecko-python/issues"
