[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchgecko"
version = "0.1.1"
description = "Python client for BenchGecko, the AI model data platform. Compare LLM benchmarks, estimate inference costs, and explore pricing across 55+ providers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "BenchGecko", email = "hello@benchgecko.ai" }
]
keywords = [
    "llm",
    "ai",
    "benchmarks",
    "model-comparison",
    "pricing",
    "inference-cost",
    "gpt",
    "claude",
    "gemini",
    "mcp",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://benchgecko.ai"
Documentation = "https://benchgecko.ai/api-docs"
Repository = "https://github.com/BenchGecko/benchgecko-python"
"Bug Tracker" = "https://github.com/BenchGecko/benchgecko-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
